@@ -4397,6 +4397,43 @@ int bad_restrict(
   return(1);
   }  /* END bad_restrict() */
 
+/*
+ * mom_lock - lock out other MOMs from this directory.
+ */
+
+static void mom_lock(
+  int fds,
+  int op)   /* F_WRLCK or F_UNLCK */
+  {
+  struct flock flock;
+
+  flock.l_type   = op;
+  flock.l_whence = SEEK_SET;
+  flock.l_start  = 0;
+  flock.l_len    = 0; /* whole file */
+
+  if (fcntl(fds, F_SETLK, &flock) < 0)
+    {
+    char tmpPath[256];
+
+    tmpPath[0] = '\0';
+
+    if (getcwd(tmpPath, sizeof(tmpPath)) == NULL)
+      tmpPath[0] = '\0';
+
+    sprintf(log_buffer, "cannot lock '%s/mom.lock' - another mom running",
+            (tmpPath[0] != '\0') ? tmpPath : "$MOM_HOME");
+
+    log_err(errno, msg_daemonname, log_buffer);
+
+    fprintf(stderr, "%s\n",
+            log_buffer);
+
+    exit(1);
+    }
+
+  return;
+  }  /* END mom_lock() */
 
 
 /*
@@ -5362,7 +5399,7 @@ int rm_request(
       flush_io(iochan);
 
       close_io(iochan);
-
+      
       mom_lock(lockfds, F_UNLCK);
       close(lockfds);
 
@@ -5949,46 +5986,6 @@ int kill_job(
 
   return(ct);
   }  /* END kill_job() */
-
-/*
- * mom_lock - lock out other MOMs from this directory.
- */
-
-static void mom_lock(
-  int fds,
-  int op)   /* F_WRLCK or F_UNLCK */
-
-  {
-
-  struct flock flock;
-
-  flock.l_type   = op;
-  flock.l_whence = SEEK_SET;
-  flock.l_start  = 0;
-  flock.l_len    = 0; /* whole file */
-
-  if (fcntl(fds, F_SETLK, &flock) < 0)
-    {
-    char tmpPath[256];
-
-    tmpPath[0] = '\0';
-
-    if (getcwd(tmpPath, sizeof(tmpPath)) == NULL)
-      tmpPath[0] = '\0';
-
-    sprintf(log_buffer, "cannot lock '%s/mom.lock' - another mom running",
-            (tmpPath[0] != '\0') ? tmpPath : "$MOM_HOME");
-
-    log_err(errno, msg_daemonname, log_buffer);
-
-    fprintf(stderr, "%s\n",
-            log_buffer);
-
-    exit(1);
-    }
-
-  return;
-  }  /* END mom_lock() */
 
 
 /*
